--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: center;
     width: 50%;
-    background-color: rgba(142, 142, 143, 0.671);
+    background: rgb(2,0,36);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(34,180,184,1) 41%, rgba(0,212,255,1) 100%);
     border-radius: 10px;
     height: 600px;
     padding-top: 16px;
@@ -18,16 +19,14 @@
 }
 
 .startScreen {
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-width: 100%;
-z-index: 3;
-background-color:  rgba(142, 142, 143, 1);
-
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 3;
+    background-color: rgba(142, 142, 143, 1);
 }
-
 
 @media (max-width: 1000px) {
     .mainDiv {
