--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     background: rgb(2,0,36);
     background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(34,180,184,1) 41%, rgba(0,212,255,1) 100%);
     border-radius: 10px;
-    height: 600px;
+    height: 100vh;
     padding-top: 16px;
 }
 
@@ -31,6 +31,6 @@
 @media (max-width: 1000px) {
     .mainDiv {
         width: 100%;
-        height: 600px;
+        height: 100vh;
     }
 }
